--- a/00_Index.ipynb
+++ b/00_Index.ipynb
@@ -25,12 +25,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f9c38a44-f14e-4398-a29b-17cf5adbe961",
+   "cell_type": "markdown",
+   "id": "d3cfd5f5-308c-49c9-ad84-278765c761a5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### <a href=\"04_Grafy_po_dnoch_a_hodinach.ipynb\">Grafy pre jednotlivé dni po hodinách</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "939854a4-fb14-42b2-82c3-a3be94ea1f3d",
+   "metadata": {},
+   "source": [
+    "### <a href=\"05_Histogramy_vzdialenosti_casy.ipynb\">Histogramy pre časy jázd a prejazdené vzdialenosti</a>"
+   ]
   }
  ],
  "metadata": {
