Added 06_Mapa, actualized Index, data_funkcie

--- a/00_Index.ipynb
+++ b/00_Index.ipynb
@@ -39,6 +39,22 @@
    "source": [
     "### <a href=\"05_Histogramy_vzdialenosti_casy.ipynb\">Histogramy pre časy jázd a prejazdené vzdialenosti</a>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06f6ffae-8cca-48a8-a3ac-4288d2e89c62",
+   "metadata": {},
+   "source": [
+    "### <a href=\"06_Mapa_konecne.ipynb\">Zobrazenie nástupov a výstupov jázd na mape</a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc06b87b-63ea-48f8-bdaf-a63ea4702642",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
