--- a/05_Histogramy_vzdialenosti_casy.ipynb
+++ b/05_Histogramy_vzdialenosti_casy.ipynb
@@ -149,7 +149,9 @@
    },
    "outputs": [],
    "source": [
-    "plot_histo(df, 'distance', (0, 8), 40) # skusat rozne nbins aj hornu htanicu"
+    "plot_histo(df, 'distance', (0, 8), 40) # skusat rozne nbins aj hornu hranicu\n",
+    "# preco sa pri niektorom pocte binov histogram 'rozpada' ?\n",
+    "# df.filter(pl.col('distance') == pl.col('distance').round(1))"
    ]
   },
   {
