Added 07_, 08_, cleaned final

--- a/00_Index.ipynb
+++ b/00_Index.ipynb
@@ -49,9 +49,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "84cb9fb7-c324-45a2-850f-6a71595c4b4f",
+   "metadata": {},
+   "source": [
+    "### <a href=\"07_Panel_a_mapa.ipynb\">Základná `panel` aplikácia (mapa)</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2ec2081-1cb4-474f-94b6-c45bedc4cf93",
+   "metadata": {},
+   "source": [
+    "### <a href=\"08_Panel_Aplikacia.ipynb\">Panel aplikácia skoro hotová</a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc06b87b-63ea-48f8-bdaf-a63ea4702642",
+   "id": "09b8cd3d-c1e0-49b4-906d-95c74abac6db",
    "metadata": {},
    "outputs": [],
    "source": []
