--- a/04_Grafy_po_dnoch_a_hodinach.ipynb
+++ b/04_Grafy_po_dnoch_a_hodinach.ipynb
@@ -111,13 +111,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "769301ce-afe4-4084-aa57-1f7a147e7a69",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# funkcia pre vyrobenie df_days z povodnej df; urobime grupovanie a agregacie na jeden sup\n",
+    "def daily_frame(frm):   # vyvolame s df ako frm\n",
+    "    df_days = df.group_by(pl.col('pick_dt').dt.day().alias('pick_day'), \n",
+    "                          pl.col('pick_dt').dt.hour().alias('pick_hour'))\\\n",
+    "                         .agg([pl.col('passengers').sum().alias('pass_count'),\n",
+    "                               pl.col('fare').count().alias('fares_count'),\n",
+    "                               pl.col('fare').sum().alias('total_fare')])\n",
+    "    return df_days"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "72b2a484-c79f-4e8d-afe3-d70ac99100cf",
    "metadata": {},
    "outputs": [],
    "source": [
     "# mame vsetko, aby sme kreslili, nakopcime monthly_plot z data_funkcie a upravime\n",
     "def daily_plot(frm, day): # frm tu bude povyssia df_days\n",
-    "    frm_day = frm.filter(pl.col('pick_day') == day).sort(by='pick_hour')\n",
+    "    frm_d = daily_frame(frm)\n",
+    "    frm_day = frm_d.filter(pl.col('pick_day') == day).sort(by='pick_hour')\n",
     "    pass_fares_plot = px.bar(frm_day, x='pick_hour', y=['pass_count', 'fares_count'], barmode='group',\n",
     "                             labels={'pick_hour': 'Hodina', 'value': 'Hodnoty', 'variable': 'Premenná'})\n",
     "    pass_fares_plot.update_layout(xaxis=dict(tickmode='array', tickvals=list(range(24))))\n",
@@ -133,38 +153,7 @@
    },
    "outputs": [],
    "source": [
-    "daily_plot(df_days, 14)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eef52e41-1855-4bcb-a441-d7c543011382",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# este funkcia pre vyrobenie df_days z povodnej df; urobime grupovanie a agregacie na jeden sup\n",
-    "def daily_frame(frm):   # vyvolame s df ako frm\n",
-    "    df_days = df.group_by(pl.col('pick_dt').dt.day().alias('pick_day'), \n",
-    "                          pl.col('pick_dt').dt.hour().alias('pick_hour'))\\\n",
-    "                         .agg([pl.col('passengers').sum().alias('pass_count'),\n",
-    "                               pl.col('fare').count().alias('fares_count'),\n",
-    "                               pl.col('fare').sum().alias('total_fare')])\n",
-    "    return df_days"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "053e08d3-779c-4b32-a146-b29543c14edf",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "daily_frame(df).head()"
+    "daily_plot(df, 14)"
    ]
   },
   {
