drobne upravy, pridane 09_Marimo

--- a/03_Prve_grafy.ipynb
+++ b/03_Prve_grafy.ipynb
@@ -222,8 +222,12 @@
     "    df_month = df_month.rename({'pick_dt': column})   # pick_dt sa tu nehodi, bude pick_day alebo pick_hour\n",
     "    return df_month\n",
     "\n",
-    "def monthly_plot(frm, day=True):\n",
-    "    mframe = monthly_frame(frm, day)\n",
+    "# V aplikacii budeme mat radiobox s volbami ['Podľa dní','Podľa hodín', 'Dni v týždni (nástupy)']\n",
+    "\n",
+    "def monthly_plot(dhc):\n",
+    "    day = (dhc == 'Podľa dní')\n",
+    "    xcol = 'pick_day' if day else 'pick_hour'\n",
+    "    mframe = monthly_frame(df, day)\n",
     "    xcol = 'pick_day' if day else 'pick_hour'\n",
     "    xlabel = {'pick_day': 'Deň', 'pick_hour': 'Hodina'}\n",
     "    xticks = {'pick_day': list(range(1, 32)), 'pick_hour': list(range(24))}\n",
@@ -348,7 +352,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# zosumarizujeme, vyrobime funkciu week_plot a hodime ju do data_funkcie.py\n",
+    "# zosumarizujeme, vyrobime funkcie week_plot, view_month_week a hodime ich do data_funkcie.py\n",
     "def week_plot(frm):\n",
     "    df_weekday = (frm.group_by(pl.col('pick_dt').dt.weekday())\n",
     "                     .agg(pl.col('passengers').count().alias('pass_count'))  # co keby sum namiesto count?\n",
@@ -360,7 +364,14 @@
     "    xtext = ['Pondelok', 'Utorok', 'Streda', 'Štvrtok', 'Piatok', 'Sobota', 'Nedeľa']\n",
     "    graf.update_layout(xaxis=dict(tickmode='array', tickvals=list(range(1, 8)), title='Deň v týždni',\n",
     "                       ticktext=xtext, tickangle=0), yaxis=dict(title=\"Priem. počet jázd\"))\n",
-    "    return graf"
+    "    return graf\n",
+    "\n",
+    "# v aplikacii budu tie tri grafy - mesacne podla hodin, dni a tyzdenny v jednej 'zalozke'\n",
+    "\n",
+    "def view_month_week(doh):\n",
+    "    if doh in ['Podľa dní', 'Podľa hodín']:\n",
+    "        return monthly_plot(doh)\n",
+    "    return week_plot(df)"
    ]
   }
  ],
