--- a/04_Grafy_po_dnoch_a_hodinach.ipynb
+++ b/04_Grafy_po_dnoch_a_hodinach.ipynb
@@ -134,9 +134,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# mame vsetko, aby sme kreslili, nakopcime monthly_plot z data_funkcie a upravime\n",
-    "def daily_plot(frm, day): # frm tu bude povyssia df_days\n",
-    "    frm_d = daily_frame(frm)\n",
+    "# mame vsetko, aby sme kreslili, podobne bude ako monthly_plot z data_funkcie\n",
+    "def daily_plot(day): # frm tu bude povyssia df_days\n",
+    "    frm_d = daily_frame(df)\n",
     "    frm_day = frm_d.filter(pl.col('pick_day') == day).sort(by='pick_hour')\n",
     "    pass_fares_plot = px.bar(frm_day, x='pick_hour', y=['pass_count', 'fares_count'], barmode='group',\n",
     "                             labels={'pick_hour': 'Hodina', 'value': 'Hodnoty', 'variable': 'Premenná'})\n",
@@ -153,7 +153,7 @@
    },
    "outputs": [],
    "source": [
-    "daily_plot(df, 14)"
+    "daily_plot(14)"
    ]
   },
   {
