--- a/05_Histogramy_vzdialenosti_casy.ipynb
+++ b/05_Histogramy_vzdialenosti_casy.ipynb
@@ -73,8 +73,8 @@
    "outputs": [],
    "source": [
     "# na figu su nam teraz pick_dt a drop_dt, znicime ich\n",
-    "df = df.drop(['pick_dt', 'drop_dt'])  # nie je to 'in_place'\n",
-    "df.head()"
+    "df_dt = df.drop(['pick_dt', 'drop_dt'])  # nie je to 'in_place'\n",
+    "df_dt.head()"
    ]
   },
   {
@@ -87,8 +87,8 @@
    "outputs": [],
    "source": [
     "# predbezny prieskum -rozsahy\n",
-    "for col in df.columns:\n",
-    "    print(col, df[col].min(), df[col].max())"
+    "for col in df_dt.columns:\n",
+    "    print(col, df_dt[col].min(), df_dt[col].max())"
    ]
   },
   {
@@ -101,8 +101,8 @@
    "outputs": [],
    "source": [
     "# ako vela je dlhych a dlhotrvajucich jazd? staci pocet\n",
-    "sd = df.filter(pl.col('distance') > 10).shape # skusit 20, ...\n",
-    "st = df.filter(pl.col('rtimes') > 30).shape # 120, 60, ...\n",
+    "sd = df_dt.filter(pl.col('distance') > 10).shape # skusit 20, ...\n",
+    "st = df_dt.filter(pl.col('rtimes') > 30).shape # 120, 60, ...\n",
     "print(sd, st)"
    ]
   },
@@ -116,8 +116,8 @@
    "outputs": [],
    "source": [
     "# na zaciatok pre vzd. horna hranica 10, pre casy 30\n",
-    "yd, xd = np.histogram(df['distance'], bins=20, range=(0, 10)) # pochopit, co to vrati\n",
-    "yt, xt = np.histogram(df['rtimes'], bins=20, range=(0, 30))\n",
+    "yd, xd = np.histogram(df_dt['distance'], bins=20, range=(0, 10)) # pochopit, co to vrati\n",
+    "yt, xt = np.histogram(df_dt['rtimes'], bins=20, range=(0, 30))\n",
     "# np.histogram?"
    ]
   },
@@ -131,9 +131,9 @@
    "outputs": [],
    "source": [
     "# jedna funkcia pre kreslenie staci - aj s np.histogram vnutri\n",
-    "def plot_histo(frm, col, rozsah, nbins=20):\n",
+    "def plot_histo(col, rozsah, nbins=20):\n",
     "    xlabel = 'Vzdialenosť (míle)' if col == 'distance' else 'Čas jazdy'\n",
-    "    y, x = np.histogram(frm[col], range=rozsah, bins=nbins)\n",
+    "    y, x = np.histogram(df_dt[col], range=rozsah, bins=nbins)\n",
     "    x = (x[0:-1] + x[1:]) / 2  # stredy intervalov, nie konce\n",
     "    df_hist = pl.DataFrame({'x': x, 'y': y})  # pomocna frejma\n",
     "    return px.bar(df_hist, x='x', y='y', barmode='group', \n",
@@ -149,8 +149,8 @@
    },
    "outputs": [],
    "source": [
-    "plot_histo(df, 'distance', (0, 8), 40) # skusat rozne nbins aj hornu hranicu\n",
-    "# preco sa pri niektorom pocte binov histogram 'rozpada' ?\n",
+    "plot_histo('rtimes', (0, 40), 40) # skusat 'distance', rozne nbins aj hornu hranicu\n",
+    "# preco sa pri niektorom pocte binov histogram pre vzdialenosti 'rozpada' ?\n",
     "# df.filter(pl.col('distance') == pl.col('distance').round(1))"
    ]
   },
@@ -163,7 +163,7 @@
    },
    "outputs": [],
    "source": [
-    "plot_histo(df, 'rtimes', (0, 35), 40) "
+    "# plot_histo('rtimes', (0, 35), 40) "
    ]
   },
   {
@@ -179,7 +179,7 @@
    "id": "656c3777-ef97-4348-8060-a4c680c5a85b",
    "metadata": {},
    "source": [
-    "#### Pridáme do `datafunkcie.py` funkcie `plot_histo` aj `dt_frame` pre datafrejmu s časmi jázd a vzdialenosťami "
+    "#### Pridáme do `datafunkcie.py` funkcie `plot_histo` aj `dt_frame` pre vyrobu datafrejmy s časmi jázd a vzdialenosťami "
    ]
   },
   {
@@ -189,7 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def dt_frame(frm): # frm bude povodna df\n",
+    "def dt_frame(frm): # frm bude povodna df, vyrobime df_dt\n",
     "    df_dt = frm.with_columns(((pl.col('drop_dt') - pl.col('pick_dt')).cast(pl.Float32)/1000/60).alias('rtimes'))\n",
     "    df_dt = df_dt.drop(['pick_dt', 'drop_dt'])\n",
     "    return df_dt"
