--- a/08_Panel_Aplikacia.ipynb
+++ b/08_Panel_Aplikacia.ipynb
@@ -12,7 +12,7 @@
     "import polars as pl\n",
     "import panel as pn\n",
     "import panel.widgets as pnw\n",
-    "from final.data_funkcie import df, pick_plot, drop_plot, monthly_plot, week_plot, daily_plot, plot_histo \n",
+    "from final.data_funkcie import df, pick_plot, drop_plot, view_month_week, daily_plot, plot_histo \n",
     "pn.extension('plotly', 'ipywidgets')"
    ]
   },
@@ -52,15 +52,7 @@
    },
    "outputs": [],
    "source": [
-    "def view_monthly(doh):\n",
-    "    if doh == 'Podľa dní':\n",
-    "        return monthly_plot(df, day=True)\n",
-    "    elif doh == 'Podľa hodín':\n",
-    "        return monthly_plot(df, day=False)\n",
-    "    else:\n",
-    "        return week_plot(df)\n",
-    "\n",
-    "bind_monthly = pn.bind(view_monthly, doh=day_hour_choose)\n",
+    "bind_monthly = pn.bind(view_month_week, doh=day_hour_choose)\n",
     "tab_monthly = pn.Column(day_hour_choose, bind_monthly)"
    ]
   },
