prec nepotrebne importy, pridane final/Panel_Aplikacia.py

--- a/05_Histogramy_vzdialenosti_casy.ipynb
+++ b/05_Histogramy_vzdialenosti_casy.ipynb
@@ -130,14 +130,20 @@
    },
    "outputs": [],
    "source": [
-    "# jedna funkcia pre kreslenie staci - aj s np.histogram vnutri\n",
+    "# jedna funkcia pre kreslenie staci - aj s np.histogram vnutri, potom dve funkcie pre vzdial. a casy\n",
     "def plot_histo(col, rozsah, nbins=20):\n",
     "    xlabel = 'Vzdialenosť (míle)' if col == 'distance' else 'Čas jazdy'\n",
     "    y, x = np.histogram(df_dt[col], range=rozsah, bins=nbins)\n",
     "    x = (x[0:-1] + x[1:]) / 2  # stredy intervalov, nie konce\n",
     "    df_hist = pl.DataFrame({'x': x, 'y': y})  # pomocna frejma\n",
     "    return px.bar(df_hist, x='x', y='y', barmode='group', \n",
-    "                  labels={'x': xlabel, 'y': 'početnosť', 'variable': 'hodnota'}, width=900, height=350)"
+    "                  labels={'x': xlabel, 'y': 'početnosť', 'variable': 'hodnota'}, width=900, height=350)\n",
+    "\n",
+    "def histo_dists(bins):\n",
+    "    return plot_histo('distance', (0, 8), bins)\n",
+    "\n",
+    "def histo_times(bins):\n",
+    "    return plot_histo('rtimes', (0, 35), bins)"
    ]
   },
   {
@@ -179,7 +185,8 @@
    "id": "656c3777-ef97-4348-8060-a4c680c5a85b",
    "metadata": {},
    "source": [
-    "#### Pridáme do `datafunkcie.py` funkcie `plot_histo` aj `dt_frame` pre vyrobu datafrejmy s časmi jázd a vzdialenosťami "
+    "#### Pridáme do `datafunkcie.py` funkcie `plot_histo`, `histo_times`, `histo_dists` aj`dt_frame` \n",
+    "#### pre vyrobu datafrejmy s časmi jázd a vzdialenosťami "
    ]
   },
   {
