--- a/08_Panel_Aplikacia.ipynb
+++ b/08_Panel_Aplikacia.ipynb
@@ -9,11 +9,11 @@
    },
    "outputs": [],
    "source": [
-    "import polars as pl\n",
     "import panel as pn\n",
     "import panel.widgets as pnw\n",
-    "from final.data_funkcie import df, pick_plot, drop_plot, view_month_week, daily_plot, plot_histo \n",
-    "pn.extension('plotly', 'ipywidgets')"
+    "from final.data_funkcie import pick_plot, drop_plot, view_month_week, daily_plot, histo_dists, histo_times \n",
+    "pn.extension('plotly', 'ipywidgets')\n",
+    "# vsimnime si, ze ziadnu datafrejmu neimportujeme, vsetko sa deja v data_funkcie"
    ]
   },
   {
@@ -29,9 +29,7 @@
     "day_choose = pnw.IntSlider(start=1, end=31, value=14, width=250, name='Deň')\n",
     "hour_choose = pnw.IntSlider(start=0, end=23, value=11, width=300, name='Hodina')\n",
     "direction = pnw.RadioBoxGroup(options=['Nástup','Výstup'], inline=True)\n",
-    "# pre mesacne grafy\n",
     "day_hour_choose = pnw.RadioBoxGroup(options=['Podľa dní','Podľa hodín', 'Dni v týždni (nástupy)'], inline=True)\n",
-    "# pre histogramy\n",
     "nbins_choose = pnw.IntSlider(start=10, end=120, value=20, width=250, name='Počet tried')"
    ]
   },
@@ -115,11 +113,6 @@
    },
    "outputs": [],
    "source": [
-    "def histo_dists(bins):\n",
-    "    return plot_histo('distance', (0, 8), bins)\n",
-    "def histo_times(bins):\n",
-    "    return plot_histo('rtimes', (0, 35), bins)\n",
-    "\n",
     "bind_dists = pn.bind(histo_dists, bins=nbins_choose)\n",
     "bind_times = pn.bind(histo_times, bins=nbins_choose)\n",
     "tab_histo = pn.Column(nbins_choose, bind_dists, bind_times)"
