10_ , datashader_images pridane, aktualizovany Index

--- a/00_Index.ipynb
+++ b/00_Index.ipynb
@@ -65,9 +65,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ca86fa6c-556e-4fd8-9105-1c7be3ad855e",
+   "metadata": {},
+   "source": [
+    "### <a href=\"09_Marimo_Aplikacia.py\">Tá istá aplikácia s marimo, len pozrieť zdroják</a>\n",
+    "\n",
+    "### Ako to funguje, poďme do Terminálu a tam si to povieme."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef62430b-088c-4a1c-af3a-142f95e1547d",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### <a href=\"10_Co_by_sa_dalo.ipynb\">Čo by sa ešte dalo s dátami robiť</a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09b8cd3d-c1e0-49b4-906d-95c74abac6db",
+   "id": "b3a92cce-2633-4d62-91b1-ca9b4086cb1d",
    "metadata": {},
    "outputs": [],
    "source": []
