Mapa_ipyleaflet pridane

--- a/00_Index.ipynb
+++ b/00_Index.ipynb
@@ -85,12 +85,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b3a92cce-2633-4d62-91b1-ca9b4086cb1d",
+   "cell_type": "markdown",
+   "id": "1336be34-a7aa-4715-9446-72f9454db48c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### <a href=\"11_Zaver.ipynb\">Záver, odkazy</a>"
+   ]
   }
  ],
  "metadata": {
