--- a/11_Zaver.ipynb
+++ b/11_Zaver.ipynb
@@ -8,7 +8,9 @@
     "## Odkazy na použité nástroje\n",
     "- ### polars: https://pola.rs/\n",
     "- ### plotly: https://plotly.com/python/\n",
-    "- ### panel:  https://panel.holoviz.org/"
+    "- ### panel:  https://panel.holoviz.org/\n",
+    "- ### marimo: https://docs.marimo.io/\n",
+    "- ### datashader: https://datashader.org/"
    ]
   },
   {
