Added taxi_marimo_map, final/view_functions

--- a/00_Index.ipynb
+++ b/00_Index.ipynb
@@ -66,6 +66,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6a0f65ec-6a45-42a6-b8d5-ff00ecf8ba7e",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### <a href=\"Mapa_ipyleaflet.ipynb\">Mapy s použitím `ipyleaflet` namiesto `plotly`</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ca86fa6c-556e-4fd8-9105-1c7be3ad855e",
    "metadata": {},
    "source": [
