--- a/10_Co_by_sa_dalo.ipynb
+++ b/10_Co_by_sa_dalo.ipynb
@@ -103,7 +103,8 @@
    "source": [
     "## Sledovanie nástupov a výstupov na vybraných častiach mapy \n",
     "### (napr. letisko, prístavy, centrum Manhattanu). \n",
-    "### Že to ide (s `plotly` mapami), vidíme na http://feelmath.eu:2025/\n",
+    "### Že to ide (s `plotly` mapami), vidíme na http://feelmath.eu:2025/ a ako je to urobené,\n",
+    "### môžete vidieť tu <a href=\"taxi_marimo_map.py\">Marimo s výberom na mape</a>\n",
     "\n",
     "## Isto vás napadne ešte veľa, čo by sa dalo s týmito, \n",
     "## alebo inými dátami o newyorkských taxikároch robiť..."
