--- a/11_Zaver.ipynb
+++ b/11_Zaver.ipynb
@@ -21,6 +21,23 @@
     "## Odkaz na github, všetky materiály:\n",
     "- ### https://github.com/misolietavec/DAworkshop24"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f124042f-1da2-4c1f-a222-9b7c9a27b4ce",
+   "metadata": {},
+   "source": [
+    "## Pôvodný dátový súbor:\n",
+    "- ### https://feelmath.eu/Download/nyc_taxi.parq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7285099-72b7-415e-9686-615c1920035d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
