02_data, pridane rtime

--- a/02_Data_prvy_pohlad.ipynb
+++ b/02_Data_prvy_pohlad.ipynb
@@ -56,6 +56,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3fba3bb9-2b76-41cb-a4df-e6d849eeb24f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9d49bd16-99c3-4b54-a564-6b5c72a7a38b",
    "metadata": {
     "tags": []
@@ -63,8 +75,8 @@
    "outputs": [],
    "source": [
     "# co je df - DataFrame, tabulka s pomenovanymi stlpcami. ake su nase?\n",
-    "# df.columns   # co je co, uhadneme?\n",
-    "df.schema      # preco ziadne casove pasmo - spolahneme sa, ze maju svoje casy"
+    "print(df.columns)   # co je co, uhadneme?\n",
+    "df.schema  "
    ]
   },
   {
@@ -76,21 +88,8 @@
    },
    "outputs": [],
    "source": [
-    "# pozrieme datam na hlavu, alebo chvost\n",
-    "df.head() # .tail()  # funkcii podhodit aka velka ma byt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c1616fb8-b06e-4f6e-80ea-b07759e73391",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# privela miest za desat. bodkou stacia nam 3\n",
-    "pl.Config.set_float_precision(3) # nabuduce mozeme dat na zaciatku"
+    "# pozrieme datam na hlavu, alebo chvost, nie je explicitny index, iba cisla riadkov ako v zozname, list\n",
+    "df.head(8) # .tail()  # funkcii podhodit aka velka ma byt"
    ]
   },
   {
@@ -127,6 +126,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0cc98ff9-284e-4c4e-a9ff-3a52afce892e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# ako dostat casove trvanie jazd? pridame stlpec rtime do df, chceme v minutach\n",
+    "df_rtimes = df.with_columns(rtime=(pl.col('drop_dt') - pl.col('pick_dt')) / 1000 / 60) # .head()\n",
+    "# to hore sa da sformulovat pomocou rtime\n",
+    "df_rtimes.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e69fffcf-8e3c-4641-8c5e-179d589fccc2",
    "metadata": {
     "tags": []
@@ -151,7 +165,6 @@
    "source": [
     "# napada nas funkcia pre min, max lubovolneho stlpca v dataframe\n",
     "def minmax(df, col):\n",
-    "    # preco nie .select?\n",
     "    return df[col].min(), df[col].max()"
    ]
   },
@@ -164,9 +177,8 @@
    },
    "outputs": [],
    "source": [
-    "# pre povodnu df, preco nie df.describe()?\n",
-    "for col in df.columns:\n",
-    "    print(f'{col}: ', minmax(df, col))"
+    "for col in df_rtimes.columns:\n",
+    "    print(f'{col}: ', minmax(df_rtimes, col))"
    ]
   },
   {
@@ -180,6 +192,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f9f1e712-aeae-4c77-b682-d785466840dd",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# velke casy jazd 1440/60 je 24 hod.!\n",
+    "df_rtimes = df_rtimes.filter(~(pl.col('rtime') > 120)) # asi im osmyklo o den, dame prec\n",
+    "df_rtimes.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c79a2d3e-37af-4152-a98a-1744bfb8766f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df_rtimes['rtime'].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "39b22eb0-4e66-4c1d-8592-b281aaa87c25",
    "metadata": {
     "tags": []
@@ -187,8 +225,8 @@
    "outputs": [],
    "source": [
     "# co je tu podozrive?\n",
-    "df.filter((pl.col('passengers') == 0)) #  & (pl.col('fare') > 0)) # ako interpretovat?\n",
-    "# df.filter((pl.col('fare') <= 0)) # .select(pl.col('distance')).max()\n",
+    "df_rtimes.filter((pl.col('passengers') == 0)) #  & (pl.col('fare') > 0)) # ako interpretovat?\n",
+    "# df_rtimes.filter((pl.col('fare') <= 0)) # .select(pl.col('distance')).max()\n",
     "# df.filter((pl.col('tip') < 0))"
    ]
   },
@@ -215,25 +253,24 @@
    },
    "outputs": [],
    "source": [
-    "# ked 0 pasazierov no bolo zaplatene, dat 1 pasaziera\n",
+    "# ked 0 dat 1 pasaziera, hoci  by bol aj taxikar, neskor vycistime nezalatene\n",
     "\n",
-    "df = df.with_columns(pl.when((pl.col('passengers') == 0) & (pl.col('fare') > 0))\n",
-    "                       .then(1)\n",
-    "                       .otherwise(pl.col('passengers'))\n",
-    "                       .alias('passengers')) # ['passengers'].head()"
+    "df_rtimes = df_rtimes.with_columns(pl.when((pl.col('passengers') == 0))\n",
+    "                                     .then(1)\n",
+    "                                     .otherwise(pl.col('passengers'))\n",
+    "                                     .alias('passengers')) # ['passengers'].head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79f98f95-b0ce-4977-979a-253bccd40d8f",
+   "id": "942a2d87-70f2-4f15-b2ce-3a31a058c05e",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# toto asi prec\n",
-    "# df.filter((pl.col('fare') == 0) & (pl.col('tip') == 0) & (pl.col('distance') == 0)) # ['distance'].max()"
+    "df_rtimes['passengers'].min()"
    ]
   },
   {
@@ -245,7 +282,7 @@
    },
    "outputs": [],
    "source": [
-    "df.shape"
+    "df_rtimes.shape"
    ]
   },
   {
@@ -258,7 +295,7 @@
    "outputs": [],
    "source": [
     "# odstranit zaporne a nulove platby\n",
-    "df = df.filter((pl.col('fare') > 0))"
+    "df_rtimes = df_rtimes.filter((pl.col('fare') > 0))"
    ]
   },
   {
@@ -271,8 +308,8 @@
    "outputs": [],
    "source": [
     "# podozrivo velka max. vzdialenost, kde to bolo? neustriehli sme...\n",
-    "# df.filter(pl.col('distance') == minmax(df, 'distance')[1])\n",
-    "df = df.filter(pl.col('distance') < 45) # hadam v NY nebudu vacsie vzdial."
+    "df_rtimes.filter(pl.col('distance') == minmax(df, 'distance')[1])\n",
+    "df_rtimes = df_rtimes.filter(pl.col('distance') < 45) # hadam v NY nebudu vacsie vzdial."
    ]
   },
   {
@@ -285,10 +322,10 @@
    "outputs": [],
    "source": [
     "# velka platba, 500 $\n",
-    "df.filter(pl.col('fare') == minmax(df, 'fare')[1])\n",
+    "df_rtimes.filter(pl.col('fare') == minmax(df_rtimes, 'fare')[1])\n",
     "# nechame pod 90 $ a tringel pod 40 $\n",
-    "df = df.filter(pl.col('fare') < 90)\n",
-    "df = df.filter(pl.col('tip') < 40)"
+    "df_rtimes = df_rtimes.filter(pl.col('fare') < 90)\n",
+    "df_rtimes = df_rtimes.filter(pl.col('tip') < 40)"
    ]
   },
   {
@@ -301,8 +338,18 @@
    "outputs": [],
    "source": [
     "# zapiseme a dalej budeme robit s touto framou\n",
-    "print(df.shape)\n",
-    "df.write_parquet('data/nyc_taxi310k.parq')"
+    "print(df_rtimes.shape)\n",
+    "df_rtimes.write_parquet('data/nyc_taxi310k.parq')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d62ba1e-54cd-4a1f-bc69-60eea86225da",
+   "metadata": {},
+   "source": [
+    "#### Zhrnutie, čo vieme\n",
+    "- `select, filter, with_columns, alias`\n",
+    "- pridali sme stĺpec `rtimes`, trvanie jázd"
    ]
   }
  ],
